mut mapped